Updating bean pic to correct z-index.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -43,7 +43,7 @@ div.loader {
     right: -40px;
     top: -26px;
     width: 300px;
-    z-index: 1029;
+    z-index: 1030;
 }
 
 #smiling-bean img {
